bugfix scrollbars
bugfix: scrollbars were not visible and not able to scroll

--- a/src/renderer/styles/style.css
+++ b/src/renderer/styles/style.css
@@ -250,7 +250,6 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: hidden;
     font-family: 'Inter', sans-serif;
     background-color: var(--surface-page);
     color: var(--text-primary);
